k8s/base/network-policies/allow-ingress-controller.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: retailops-allow-ingress-controller
  namespace: retailops
  labels:
    app.kubernetes.io/name: retailops-allow-ingress-controller
    app.kubernetes.io/part-of: retailops-platform
    app.kubernetes.io/component: network-policy
spec:
  podSelector:
    matchExpressions:
      - key: app.kubernetes.io/name
        operator: In
        values:
          - retailops-frontend
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: traefik
      ports:
        - protocol: TCP
          port: 8080
