k8s/base/network-policies/allow-internal-and-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: retailops-allow-internal-and-dns
  namespace: retailops
  labels:
    app.kubernetes.io/name: retailops-allow-internal-and-dns
    app.kubernetes.io/part-of: retailops-platform
    app.kubernetes.io/component: network-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/part-of: retailops-platform
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/part-of: retailops-platform
  egress:
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/part-of: retailops-platform
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
