k8s/base/network-policies/default-deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: retailops-default-deny
  namespace: retailops
  labels:
    app.kubernetes.io/name: retailops-default-deny
    app.kubernetes.io/part-of: retailops-platform
    app.kubernetes.io/component: network-policy
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/part-of: retailops-platform
  policyTypes:
    - Ingress
    - Egress
